# FastMeow

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  buf.gen.go.yaml  buf.gen.yaml  buf.yaml  go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yml  release.yml
cmd/fastmeow-sidecar/: main.go  main_test.go
cmd/fastmeow-smoketest/: main.go
examples/: basic_echo.py  broadcast.py  command_bot.py  group_admin.py  media_bot.py  multi_account.py  typing_indicator.py
internal/accounts/: registry.go
internal/events/: bus.go  bus_test.go
internal/groups/: converter.go  converter_test.go  handler.go  handler_test.go
internal/media/: converter.go  errors.go  handler.go  handler_test.go
internal/messages/: sender.go
internal/presence/: converter.go  converter_test.go  handler.go  handler_test.go
internal/receipts/: converter.go  converter_test.go  handler.go  handler_test.go
internal/sessions/: store.go
proto/fastmeow/v1/: gateway.proto
scripts/: in_container_smoke.py  regen_proto.py  repack_wheel.py  smoke_check_wheels.py  smoke_groups.py  smoke_receipts_presence.py  verify_translation.py
src/fastmeow/: __init__.py  _dispatcher.py  _media.py  _supervisor.py  _transport.py  app.py  context.py  exceptions.py  filters.py  manifest.py  router.py  types.py
src/fastmeow/_generated/fastmeow/v1/: gateway_pb2.py  gateway_pb2.pyi  gateway_pb2_grpc.py
tests/: __init__.py  _smoke_e2e.py  _smoke_supervisor.py  _smoke_transport.py  test_app.py  test_context.py  test_dispatcher.py  test_filters.py  test_groups.py  test_manifest.py  test_media.py  test_phase5_ctx.py  test_phase5_send.py  test_receipts_presence.py  test_router.py  test_sidecar_handshake.py  test_types.py
