[project]
name = "fastmeow"
version = "0.1.0"
description = "Pythonic, async-native WhatsApp automation SDK powered by an embedded whatsmeow Go sidecar."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "jian jian", email = "jianjian2048@gmail.com" },
]
requires-python = ">=3.12"
keywords = ["whatsapp", "whatsmeow", "automation", "bot", "async", "grpc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "grpcio>=1.68",
    "protobuf>=6.31,<7",
    "pydantic>=2.9",
    "qrcode>=7.4",
]

[project.optional-dependencies]
# Reserved for future heavy/optional integrations.
# (qrcode was promoted to a hard dep so on_qr="terminal" works out of the box.)

[project.urls]
Homepage = "https://github.com/jianjian2048/fastmeow"
Repository = "https://github.com/jianjian2048/fastmeow"
Issues = "https://github.com/jianjian2048/fastmeow/issues"

[dependency-groups]
dev = [
    "grpcio-tools>=1.74,<2",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "types-protobuf>=5.28",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.uv_build]
# Ship the bundled Go sidecar binary inside the wheel.
# cibuildwheel populates src/fastmeow/_bin/ before invoking the build.
package-data = { "fastmeow" = [
    "_bin/*",
    "_bin/*/*",
    "_generated/**/*.py",
    "_generated/**/*.pyi",
    "py.typed",
] }

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["src/fastmeow/_generated", "gen"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["src/fastmeow/_generated/", "gen/", "tests/"]

[[tool.mypy.overrides]]
module = ["fastmeow._generated.*", "grpc", "grpc.*"]
ignore_errors = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
